changes in dashboard.html

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/dashboard.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -15,23 +17,66 @@
                 <ul>
                     <li><img id="menu-bar" src="/images/menu-bar.svg" alt=""></li>
                     <li><img id="logo" src="/images/logo.svg" alt=""></li>
-                    <li><div id="search">
-                        <ul>
-                            <li><img id="search-icon" src="/images/search-icon.svg" alt=""></li>
-                            <li><p>Search</p></li>
-                        </ul>
-                    </div></li>
+                    <li>
+                        <div id="search">
+                            <ul>
+                                <li><img id="search-icon" src="/images/search-icon.svg" alt=""></li>
+                                <li>
+                                    <p>Search</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
                 </ul>
             </div>
             <div id="right-menu">
                 <ul>
-                    <li><img id="not-icon"  src="/images/notification-icon.svg" alt=""></li>
+                    <li><img id="not-icon" src="/images/notification-icon.svg" alt=""></li>
                     <li><img id="profile-pic" src="/images/profile.png" alt=""></li>
-                    <li><p>John Doe</p></li>
+                    <li>
+                        <p>John Doe</p>
+                    </li>
                     <li><img id="down-arr" src="/images/downward-arrow.svg" alt=""></li>
-                </ul> 
+                </ul>
             </div>
         </nav>
+        <div id="content">
+            <div id="container">
+                <ul>
+                    <li>
+                        <img src="/images/dashboard-active.svg" alt="">
+                        <p>Dashboard</p>
+                    </li>
+                    <li>
+                        <img src="/images/graph-default.svg" alt="">
+                        <p>Analysis</p>
+                    </li>
+                    <li>
+                        <img src="/images/inbox-default.svg" alt="">
+                        <p>Inbox</p>
+                    </li>
+                    <li>
+                        <img src="/images/clock-default.svg" alt="">
+                        <p>History</p>
+                    </li>
+                    <li>
+                        <img src="/images/user-default.svg" alt="">
+                        <p>Users</p>
+                    </li>
+                    <li>
+                        <img src="/images/maintenance-default.svg" alt="">
+                        <p>Maintenance</p>
+                    </li>
+                    <li>
+                        <img src="/images/setting-default.svg" alt="">
+                        <p>Setting</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
     </header>
+
 </body>
+
 </html>
