making website responsive

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="col">
                 <img id="hero-image" src="/images/hero-image.png" alt="">
             </div>
-            <div class="col">
+            <div class="col" id="2-col">
                 <div class="container" id="content">
                     <img id="company-logo" src="/images/logo.svg" alt="">
                     <h1 id="main-heading">We are
