--- a/pages/innerpage.html
+++ b/pages/innerpage.html
@@ -45,7 +45,7 @@
         <div id="container">
             <ul>
                 <li class="active">
-                    <a href="">
+                    <a href="/pages/dashboard.html">
                         <img src="/images/dashboard-default.svg" alt="">
                         <p>Dashboard</p>
                     </a>
@@ -124,7 +124,7 @@
                         </fieldset>
                         <fieldset id="field-set">
                             <legend>Password</legend>
-                            <input type="password" value="johndoe">
+                            <input type="password" value="dfdyghvb">
                         </fieldset>
                         <fieldset id="field-set" disabled>
                             <legend>Disabled</legend>
@@ -220,6 +220,7 @@
                                 <li>Tab 1</li>
                                 <li>Tab 2</li>
                                 <li>Tab 3</li>
+                                <span id="red-line"></span>
                             </ul>
                             
                         </div>
