--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -184,17 +184,17 @@
                     <h3>Invoices</h3>
                     <p>View All</p>
                 </div>
-                <table>
+                <table class="table">
                     <tr>
-                        <th>INVOICE</th>
-                        <th>COMPANY NAME</th>
-                        <th>EMAIL</th>
-                        <th>DUE DATE</th>
-                        <th>STATUS</th>
-                        <th>AMOUNT</th>
+                        <th scope="col" scope="row">INVOICE</th>
+                        <th scope="col" scope="row">COMPANY NAME</th>
+                        <th scope="col" scope="row">EMAIL</th>
+                        <th scope="col" scope="row">DUE DATE</th>
+                        <th scope="col" scope="row">STATUS</th>
+                        <th scope="col" scope="row">AMOUNT</th>
                     </tr>
                     <tr>
-                        <td>651535</td>
+                        <td scope="row">651535</td>
                         <td>Public Adjusting Film</td>
                         <td>georgia.young@example.com</td>
                         <td>24 May, 2020</td>
@@ -202,7 +202,7 @@
                         <td>$47,800</td>
                     </tr>
                     <tr>
-                        <td>558612</td>
+                        <td scope="row">558612</td>
                         <td>Other</td>
                         <td>jessica.hanson@example.com</td>
                         <td>24 May, 2020</td>
@@ -210,7 +210,7 @@
                         <td>$98,000</td>
                     </tr>
                     <tr>
-                        <td>558612</td>
+                        <td scope="row">558612</td>
                         <td>Vendor</td>
                         <td>alma.lawson@example.com</td>
                         <td>8 Sep, 2020</td>
@@ -218,7 +218,7 @@
                         <td>$20,900</td>
                     </tr>
                     <tr>
-                        <td>558612</td>
+                        <td scope="row">558612</td>
                         <td>Property Management Company</td>
                         <td>kenzi.lawson@example.com</td>
                         <td>22 Oct, 2020</td>
@@ -226,7 +226,7 @@
                         <td>$10,570</td>
                     </tr>
                     <tr>
-                        <td>651535</td>
+                        <td scope="row">651535</td>
                         <td>Subcontractor Company</td>
                         <td>jackson.graham@example.com</td>
                         <td>1 Feb, 2020</td>
@@ -234,7 +234,7 @@
                         <td>$10,200</td>
                     </tr>
                     <tr>
-                        <td>653518</td>
+                        <td scope="row">653518</td>
                         <td>Mortgage Company</td>
                         <td>felicia.reid@example.com</td>
                         <td>22 Oct, 2020</td>
@@ -242,7 +242,7 @@
                         <td>$12,600</td>
                     </tr>
                     <tr>
-                        <td>487441</td>
+                        <td scope="row">487441</td>
                         <td>TPA</td>
                         <td>dolores.chambers@example.com</td>
                         <td>21 Sep, 2020</td>
@@ -250,7 +250,7 @@
                         <td>$11,170</td>
                     </tr>
                     <tr>
-                        <td>267400</td>
+                        <td scope="row">267400</td>
                         <td>Fire Department</td>
                         <td>nevaeh.simmons@example.com</td>
                         <td>17 Oct, 2020</td>
@@ -258,7 +258,7 @@
                         <td>$28,000</td>
                     </tr>
                     <tr>
-                        <td>449003</td>
+                        <td scope="row">449003</td>
                         <td>Insurance Carrier</td>
                         <td>curtis.weaver@example.com</td>
                         <td>21 Sep, 2020</td>
@@ -269,6 +269,7 @@
             </div>
         </div>
     </div>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
