changes in dashboard.html

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -19,12 +19,8 @@
                     <li><img id="logo" src="/images/logo.svg" alt=""></li>
                     <li>
                         <div id="search">
-                            <ul>
-                                <li><img id="search-icon" src="/images/search-icon.svg" alt=""></li>
-                                <li>
-                                    <p>Search</p>
-                                </li>
-                            </ul>
+                            <img id="search-icon" src="/images/search-icon.svg" alt="">
+                            <p>Search</p>
                         </div>
                     </li>
                 </ul>
